Fixes #354 as per TAPI 10/02/2018 call discussions
- Maintenance Entity has been removed
- OamService will specify at least 2 OSEPs which has provisioning info
for either
-- 2 MEPs (OamService represents an MEG wholly contained in the domain)
-- 1 MEP & 1 MIP (OamService represents a segment of a MEG in an edge
domain)
-- 2 MIPs (OamService represents a segment of a MEG in a transit domain)
- OamJob will specify at least 1 OSEP which points to an MEP
- OSEPRelatesToMEP/MIP association navigability changed to one-way from
OSEP to MEP/MIP
- Added mepIdentifier and peerMepIdentifier attributes to OSEP
- Added mipMac & isFullMip attributes to Eth augmentation of MIP

--- a/OAS/tapi-eth@2018-08-31.yaml
+++ b/OAS/tapi-eth@2018-08-31.yaml
@@ -2136,6 +2136,15 @@ definitions:
         $ref: "#/definitions/tapi.eth.EthMepSource"
   tapi.eth.EthMipSpec:
     type: "object"
+    properties:
+      mip-mac:
+        type: "string"
+        description: "This attribute contains the MAC address of the MIP instance."
+      is-full-mip:
+        type: "boolean"
+        description: "This attribute indicates whether the MIP is a full MIP (true)\
+          \ or a down-half MIP (false)."
+        default: false
   tapi.eth.EthOamMsgCommonPac:
     allOf:
     - $ref: "#/definitions/tapi.eth.EthOamOperationCommonPac"
@@ -3381,25 +3390,6 @@ definitions:
     properties:
       output:
         $ref: "#/definitions/tapi.oam.getoamservicelist.Output"
-  tapi.oam.MaintenanceEntity:
-    allOf:
-    - $ref: "#/definitions/tapi.common.LocalClass"
-    - type: "object"
-      properties:
-        connection-route:
-          description: "none"
-          $ref: "#/definitions/tapi.connectivity.RouteRef"
-        mep:
-          type: "array"
-          description: "none"
-          items:
-            $ref: "#/definitions/tapi.oam.MepRef"
-        mip:
-          type: "array"
-          description: "none"
-          items:
-            $ref: "#/definitions/tapi.oam.MipRef"
-      description: "none"
   tapi.oam.Meg:
     allOf:
     - $ref: "#/definitions/tapi.common.GlobalClass"
@@ -3421,11 +3411,6 @@ definitions:
         layer-protocol-name:
           description: "none"
           $ref: "#/definitions/tapi.common.LayerProtocolName"
-        me:
-          type: "array"
-          description: "none"
-          items:
-            $ref: "#/definitions/tapi.oam.MaintenanceEntity"
         mep:
           type: "array"
           description: "1. ME may have 0 MEPs (case of transit domains where at least\
@@ -3459,9 +3444,6 @@ definitions:
           description: "none"
           items:
             type: "string"
-        oam-service-end-point:
-          description: "none"
-          $ref: "#/definitions/tapi.oam.OamServiceEndPointRef"
         mep-identifier:
           type: "string"
           description: "none"
@@ -3487,9 +3469,6 @@ definitions:
         layer-protocol-name:
           description: "none"
           $ref: "#/definitions/tapi.common.LayerProtocolName"
-        oam-service-end-point:
-          description: "none"
-          $ref: "#/definitions/tapi.oam.OamServiceEndPointRef"
       description: "none"
   tapi.oam.MipRef:
     allOf:
@@ -3595,6 +3574,16 @@ definitions:
     - $ref: "#/definitions/tapi.common.LocalClass"
     - type: "object"
       properties:
+        peer-mep-identifier:
+          type: "array"
+          description: "This attribute models the MI_PeerMEP_ID[i] defined in G.8021\
+            \ and configured as specified in G.8051. It provides the identifiers of\
+            \ the MEPs which are peer to the subject MEP.\r\n                    This\
+            \ attribute is not specified in case the OSEP relates to the provisioing\
+            \ of an MIP.\r\n                    In case of P2P, there is only one\
+            \ peer"
+          items:
+            type: "string"
         connectivity-service-end-point:
           description: "none"
           $ref: "#/definitions/tapi.connectivity.ConnectivityServiceEndPointRef"
@@ -3610,6 +3599,11 @@ definitions:
         mep:
           description: "none"
           $ref: "#/definitions/tapi.oam.MepRef"
+        mep-identifier:
+          type: "string"
+          description: "This attribute contains the identifier of the MEP.\r\n   \
+            \                 This attribute is empty in case the OSEP relates to\
+            \ the provisioing of an MIP.\r\n                    "
         direction:
           description: "none"
           $ref: "#/definitions/tapi.common.PortDirection"
@@ -3798,6 +3792,11 @@ definitions:
   tapi.oam.createoamserviceendpoint.Input:
     type: "object"
     properties:
+      peer-mep-identifier:
+        type: "array"
+        description: "none"
+        items:
+          type: "string"
       service-id:
         type: "string"
         description: "none"
@@ -3805,6 +3804,9 @@ definitions:
         type: "string"
         description: "none"
       c-sep-id:
+        type: "string"
+        description: "none"
+      mep-identifier:
         type: "string"
         description: "none"
       state:
@@ -3932,11 +3934,6 @@ definitions:
         layer-protocol-name:
           description: "none"
           $ref: "#/definitions/tapi.common.LayerProtocolName"
-        me:
-          type: "array"
-          description: "none"
-          items:
-            $ref: "#/definitions/tapi.oam.MaintenanceEntity"
         mep:
           type: "array"
           description: "1. ME may have 0 MEPs (case of transit domains where at least\
