--- a/OAS/tapi-odu@2018-08-31.yaml
+++ b/OAS/tapi-odu@2018-08-31.yaml
@@ -2265,25 +2265,6 @@ definitions:
     properties:
       output:
         $ref: "#/definitions/tapi.oam.getoamservicelist.Output"
-  tapi.oam.MaintenanceEntity:
-    allOf:
-    - $ref: "#/definitions/tapi.common.LocalClass"
-    - type: "object"
-      properties:
-        connection-route:
-          description: "none"
-          $ref: "#/definitions/tapi.connectivity.RouteRef"
-        mep:
-          type: "array"
-          description: "none"
-          items:
-            $ref: "#/definitions/tapi.oam.MepRef"
-        mip:
-          type: "array"
-          description: "none"
-          items:
-            $ref: "#/definitions/tapi.oam.MipRef"
-      description: "none"
   tapi.oam.Meg:
     allOf:
     - $ref: "#/definitions/tapi.common.GlobalClass"
@@ -2305,11 +2286,6 @@ definitions:
         layer-protocol-name:
           description: "none"
           $ref: "#/definitions/tapi.common.LayerProtocolName"
-        me:
-          type: "array"
-          description: "none"
-          items:
-            $ref: "#/definitions/tapi.oam.MaintenanceEntity"
         mep:
           type: "array"
           description: "1. ME may have 0 MEPs (case of transit domains where at least\
@@ -2343,9 +2319,6 @@ definitions:
           description: "none"
           items:
             type: "string"
-        oam-service-end-point:
-          description: "none"
-          $ref: "#/definitions/tapi.oam.OamServiceEndPointRef"
         mep-identifier:
           type: "string"
           description: "none"
@@ -2371,9 +2344,6 @@ definitions:
         layer-protocol-name:
           description: "none"
           $ref: "#/definitions/tapi.common.LayerProtocolName"
-        oam-service-end-point:
-          description: "none"
-          $ref: "#/definitions/tapi.oam.OamServiceEndPointRef"
       description: "none"
   tapi.oam.MipRef:
     allOf:
@@ -2502,6 +2472,16 @@ definitions:
     - $ref: "#/definitions/tapi.common.LocalClass"
     - type: "object"
       properties:
+        peer-mep-identifier:
+          type: "array"
+          description: "This attribute models the MI_PeerMEP_ID[i] defined in G.8021\
+            \ and configured as specified in G.8051. It provides the identifiers of\
+            \ the MEPs which are peer to the subject MEP.\r\n                    This\
+            \ attribute is not specified in case the OSEP relates to the provisioing\
+            \ of an MIP.\r\n                    In case of P2P, there is only one\
+            \ peer"
+          items:
+            type: "string"
         connectivity-service-end-point:
           description: "none"
           $ref: "#/definitions/tapi.connectivity.ConnectivityServiceEndPointRef"
@@ -2517,6 +2497,11 @@ definitions:
         mep:
           description: "none"
           $ref: "#/definitions/tapi.oam.MepRef"
+        mep-identifier:
+          type: "string"
+          description: "This attribute contains the identifier of the MEP.\r\n   \
+            \                 This attribute is empty in case the OSEP relates to\
+            \ the provisioing of an MIP.\r\n                    "
         direction:
           description: "none"
           $ref: "#/definitions/tapi.common.PortDirection"
@@ -2680,6 +2665,11 @@ definitions:
   tapi.oam.createoamserviceendpoint.Input:
     type: "object"
     properties:
+      peer-mep-identifier:
+        type: "array"
+        description: "none"
+        items:
+          type: "string"
       service-id:
         type: "string"
         description: "none"
@@ -2687,6 +2677,9 @@ definitions:
         type: "string"
         description: "none"
       c-sep-id:
+        type: "string"
+        description: "none"
+      mep-identifier:
         type: "string"
         description: "none"
       state:
