--- a/OAS/tapi-notification@2018-10-03.yaml
+++ b/OAS/tapi-notification@2018-10-03.yaml
@@ -1,9 +1,9 @@
 ---
 swagger: "2.0"
 info:
-  description: "tapi-notification,tapi-common API generated from yang definitions"
+  description: "tapi-common,tapi-notification API generated from yang definitions"
   version: "1.0"
-  title: "tapi-notification,tapi-common API"
+  title: "tapi-common,tapi-notification API"
 host: "localhost:1234"
 consumes:
 - "application/yang-data+json"
@@ -69,6 +69,148 @@ paths:
           description: "Internal error"
         204:
           description: "Object deleted"
+  /data/context/notif-subscription/:
+    post:
+      tags:
+      - "tapi-notification"
+      description: "creates tapi.notification.NotificationSubscriptionService"
+      parameters:
+      - in: "body"
+        name: "tapi.notification.NotificationSubscriptionService.body-param"
+        description: "tapi.notification.NotificationSubscriptionService to be added\
+          \ to list"
+        required: false
+        schema:
+          $ref: "#/definitions/tapi.notification.NotificationSubscriptionService"
+      responses:
+        201:
+          description: "Object created"
+        400:
+          description: "Internal error"
+        409:
+          description: "Object already exists"
+  /data/context/notif-subscription={uuid}/:
+    get:
+      tags:
+      - "tapi-notification"
+      description: "returns tapi.notification.NotificationSubscriptionService"
+      parameters:
+      - name: "uuid"
+        in: "path"
+        description: "Id of notif-subscription"
+        required: true
+        type: "string"
+      responses:
+        200:
+          description: "tapi.notification.NotificationSubscriptionService"
+          schema:
+            $ref: "#/definitions/tapi.notification.NotificationSubscriptionService"
+        400:
+          description: "Internal error"
+    post:
+      tags:
+      - "tapi-notification"
+      description: "creates tapi.notification.NotificationSubscriptionService"
+      parameters:
+      - name: "uuid"
+        in: "path"
+        description: "Id of notif-subscription"
+        required: true
+        type: "string"
+      - in: "body"
+        name: "tapi.notification.NotificationSubscriptionService.body-param"
+        description: "tapi.notification.NotificationSubscriptionService to be added\
+          \ to list"
+        required: false
+        schema:
+          $ref: "#/definitions/tapi.notification.NotificationSubscriptionService"
+      responses:
+        201:
+          description: "Object created"
+        400:
+          description: "Internal error"
+        409:
+          description: "Object already exists"
+    put:
+      tags:
+      - "tapi-notification"
+      description: "creates or updates tapi.notification.NotificationSubscriptionService"
+      parameters:
+      - name: "uuid"
+        in: "path"
+        description: "Id of notif-subscription"
+        required: true
+        type: "string"
+      - in: "body"
+        name: "tapi.notification.NotificationSubscriptionService.body-param"
+        description: "tapi.notification.NotificationSubscriptionService to be added\
+          \ or updated"
+        required: false
+        schema:
+          $ref: "#/definitions/tapi.notification.NotificationSubscriptionService"
+      responses:
+        201:
+          description: "Object created"
+        400:
+          description: "Internal error"
+        204:
+          description: "Object modified"
+    delete:
+      tags:
+      - "tapi-notification"
+      description: "removes tapi.notification.NotificationSubscriptionService"
+      parameters:
+      - name: "uuid"
+        in: "path"
+        description: "Id of notif-subscription"
+        required: true
+        type: "string"
+      responses:
+        400:
+          description: "Internal error"
+        204:
+          description: "Object deleted"
+  /data/context/notif-subscription={uuid}/notification={notification-uuid}/:
+    get:
+      tags:
+      - "tapi-notification"
+      description: "returns tapi.notification.Notification"
+      parameters:
+      - name: "uuid"
+        in: "path"
+        description: "Id of notif-subscription"
+        required: true
+        type: "string"
+      - name: "notification-uuid"
+        in: "path"
+        description: "Id of notification"
+        required: true
+        type: "string"
+      responses:
+        200:
+          description: "tapi.notification.Notification"
+          schema:
+            $ref: "#/definitions/tapi.notification.Notification"
+        400:
+          description: "Internal error"
+  /data/context/notification={uuid}/:
+    get:
+      tags:
+      - "tapi-notification"
+      description: "returns tapi.notification.Notification"
+      parameters:
+      - name: "uuid"
+        in: "path"
+        description: "Id of notification"
+        required: true
+        type: "string"
+      responses:
+        200:
+          description: "tapi.notification.Notification"
+          schema:
+            $ref: "#/definitions/tapi.notification.Notification"
+        400:
+          description: "Internal error"
   /data/context/service-interface-point/:
     post:
       tags:
@@ -604,9 +746,16 @@ definitions:
   tapi.notification.ContextAugmentation1:
     type: "object"
     properties:
-      notification-context:
-        description: "Augments the base TAPI Context with NotificationService information"
-        $ref: "#/definitions/tapi.notification.NotificationContext"
+      notif-subscription:
+        type: "array"
+        description: "none"
+        items:
+          $ref: "#/definitions/tapi.notification.NotificationSubscriptionService"
+      notification:
+        type: "array"
+        description: "none"
+        items:
+          $ref: "#/definitions/tapi.notification.Notification"
     x-augmentation:
       prefix: "tapi-notification"
       namespace: "urn:onf:otcc:yang:tapi-notification"
@@ -724,19 +873,6 @@ definitions:
             \ specifics of this is typically dependent on the implementation protocol\
             \ & mechanism and hence is typed as a string."
       description: "none"
-  tapi.notification.NotificationContext:
-    type: "object"
-    properties:
-      notif-subscription:
-        type: "array"
-        description: "none"
-        items:
-          $ref: "#/definitions/tapi.notification.NotificationSubscriptionService"
-      notification:
-        type: "array"
-        description: "none"
-        items:
-          $ref: "#/definitions/tapi.notification.Notification"
   tapi.notification.NotificationSubscriptionService:
     allOf:
     - $ref: "#/definitions/tapi.common.GlobalClass"
